[doc] Update translations [skip_post]

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -312,7 +312,7 @@
     <string name="player_config_screen_max_back_cache_size">Maksimum geri önbellek boyutu</string>
     <string name="torrent_download_channel_name">İndirme görevi</string>
     <string name="download_channel_name">Download task</string>
-    <string name="download_channel_description">AniVu download task notification</string>
+    <string name="download_channel_description">PodAura download task notification</string>
     <string name="player_seek_fast">Hızlı, ancak kesin değil</string>
     <string name="player_seek_exact">Kesin, ancak yavaş</string>
     <string name="player_config_screen_seek_option">Arama seçeneği</string>
@@ -324,56 +324,6 @@
     <string name="data_screen_clear_play_history_warning">Oynatma geçmişini silmek istediğinizden emin misiniz?</string>
     <string name="data_screen_clear_play_history_success">%d öğe silindi</string>
     <string name="folder">Klasör</string>
-    <string name="media_style_screen_name">Media screen</string>
-    <string name="media_style_screen_media_list_category">Media list</string>
-    <string name="media_style_screen_media_list_show_thumbnail">Show thumbnails</string>
-    <string name="media_style_screen_media_list_show_group_tab">Show group tab</string>
-    <string name="read_screen_episode">Episode %s</string>
-    <string name="feed_screen_clear_articles_warning">This will delete all articles, but not feeds, sure?</string>
-    <string name="request_headers_screen_name">Request headers</string>
-    <string name="request_headers_screen_key">Key</string>
-    <string name="request_headers_screen_value">Value</string>
-    <string name="player_config_screen_show_progress_indicator">Progress indicator</string>
-    <string name="read_screen_text_size">Text size</string>
-    <string name="download_no_notification_permission_tip">Notification permission has not been granted so the download cannot work</string>
-    <string name="read_style_screen_name">Read screen</string>
-    <string name="read_style_screen_top_bar_category">Top bar</string>
-    <string name="read_style_screen_content_category">Content</string>
-    <string name="auto_delete_article_screen_keep_unread">Preserve unread</string>
-    <string name="auto_delete_article_screen_keep_favorite">Preserve favorite</string>
-    <string name="auto_delete_article_screen_keep_unread_description">Unread articles won\'t be deleted</string>
-    <string name="auto_delete_article_screen_keep_favorite_description">Favorite articles won\'t be deleted</string>
-    <string name="appearance_screen_amoled_dark">Amoled dark</string>
-    <string name="article_notification_new_articles">New articles</string>
-    <string name="article_notification_content_text">Your concerns %s have been updated!</string>
-    <string name="rss_config_screen_notification_category">Notification</string>
-    <string name="update_notification_screen_name">Update notification</string>
-    <string name="rss_config_screen_update_notification_description">Configure article update notification rules</string>
-    <string name="article_notification_channel_name">Article notification</string>
-    <string name="update_notification_rule_name">Name</string>
-    <string name="rename">Rename</string>
-    <string name="nickname">Nickname</string>
-    <string name="download_screen_download_tasks">Download Tasks</string>
-    <string name="download_screen_bt_tasks">BT Tasks</string>
-    <string name="download_resume">Resume</string>
-    <string name="download_cancel">Cancel</string>
-    <string name="player_notification_channel_name">Player</string>
-    <string name="player_notification_channel_description">Player controller</string>
-    <string name="player_config_screen_background_play">Background playback</string>
-    <string name="expend">Expand</string>
-    <string name="collapse">Collapse</string>
-    <string name="feed_number_badge_unread">Unread</string>
-    <string name="feed_number_badge_all">All</string>
-    <string name="feed_style_screen_number_badge">Number badge</string>
-    <string name="feed_number_badge_unread_all"><![CDATA[Unread & All]]></string>
-    <string name="media_screen_style">Style</string>
-    <string name="media_display_filter_video">Video</string>
-    <string name="media_display_filter_audio">Audio</string>
-    <string name="media_display_filter_media">Media</string>
-    <string name="media_display_filter_all">All files</string>
-    <string name="behavior_screen_media_screen_category">Media library</string>
-    <string name="behavior_screen_media_file_filter">File filter</string>
-    <string name="behavior_screen_media_file_filter_placeholder">Filename regex</string>
     <plurals name="import_opml_result">
         <item quantity="one">%d öğe içe aktarıldı, %.2f saniye sürdü</item>
         <item quantity="other">%d öğe içe aktarıldı, %.2f saniye sürdü</item>
