--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -138,8 +138,8 @@
     <string name="theme_purple">Mor</string>
     <string name="theme_mahiro">Mahiro</string>
     <string name="player_config_screen_appearance_category">Görünüm</string>
-    <string name="player_config_screen_show_85s_button">+85sn düğmesi</string>
-    <string name="player_config_screen_show_85s_button_description">İlerleme çubuğunun üstünde +85sn düğmesini göster</string>
+    <string name="player_config_screen_show_forward_seconds_button">%ssn düğmesi</string>
+    <string name="player_config_screen_show_forward_seconds_button_description">İlerleme çubuğunun üstünde %ssn düğmesini göster</string>
     <string name="dark_mode_light">Açık</string>
     <string name="dark_mode_dark">Koyu</string>
     <string name="dark_mode_follow_system">Sistem</string>
